--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -14,6 +18,14 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+  gap: 8px;
+}
+
+li{
+  display: inline;
 }
 
 a {
@@ -22,4 +34,14 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links{
+  display: flex;
+  justify-content: left;
+}
+
+.right-links{
+  display: flex;
+  justify-content: right;
 }
