--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -29,6 +33,13 @@ body {
   font-style: italic;
 }
 
+.left-items, .right-items{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+
 button {
   border: none;
   border-radius: 8px;
@@ -45,4 +56,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: inline;
+  gap: 16px;
+}
+
+li {
+  list-style-type: none;
+  display: inline;
+  align-items: center;
+  gap: 16px;
 }
