--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,3 +26,50 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+a{
+  text-decoration: none;
+  color: #555;
+}
+
+ul{
+  list-style: none;
+  display: inline;
+}
+
+.left-links, .right-links{
+  padding: 0px;
+  margin: 0px;
+}
+
+li{
+  display: inline;
+  margin: 8px;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 16px;
+}
+
+.footer{
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background: #eee;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
